--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: "Exo", sans-serif;
   box-sizing: border-box;
 }
 
