--- a/src/components/TagsView.css
+++ b/src/components/TagsView.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .Main-Container p {
@@ -45,4 +45,51 @@
   height: auto;
   object-fit: cover;
   aspect-ratio: 1352/267;
+}
+
+.item {
+  border: 2px solid var(--color-secondary);
+  border-radius: 5px;
+  margin-bottom: 20px;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  transform: translateZ(0);
+
+  /* Transición para la sombra y el máximo alto */
+  transition: all 0.7s ease;
+  max-height: 150px;
+}
+
+.item.expanded {
+  max-height: 270px;
+}
+
+.item:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+}
+
+.first-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.second-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.second-items h4 {
+  user-select: none;
+  display: flex;
+  cursor: pointer;
+}
+
+.expanded-info {
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
 }
