--- a/src/components/TagsView.css
+++ b/src/components/TagsView.css
@@ -56,18 +56,34 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   transform: translateZ(0);
+  height: 90px;
+  transition: height 0.7s ease, box-shadow 0.7s ease;
+}
 
-  /* Transición para la sombra y el máximo alto */
+.item .first-items img {
+  width: 110px;
+  height: 65px;
   transition: all 0.7s ease;
-  max-height: 150px;
 }
 
 .item.expanded {
-  max-height: 270px;
+  height: 400px;
+}
+
+.item.expanded .first-items img {
+  width: 330px;
+  height: 200px;
+  transition: all 0.7s ease;
 }
 
 .item:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+}
+
+.items-order {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .first-items {
@@ -79,7 +95,20 @@
 .second-items {
   display: flex;
   align-items: center;
+  gap: 20px;
+}
+
+.second-items-2 {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
+  gap: 20px;
+}
+
+.second-items-2 h4 {
+  user-select: none;
+  display: flex;
+  cursor: pointer;
 }
 
 .second-items h4 {
@@ -92,4 +121,40 @@
   margin-top: 10px;
   padding: 10px;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.expanded-text {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.expanded-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.expanded-buttons h4 {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.Contract svg {
+  transform: rotate(180deg);
+}
+
+.area-text {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid var(--color-secondary);
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.area-text p {
+  margin: 0;
 }
