--- a/src/components/TagsView.css
+++ b/src/components/TagsView.css
@@ -63,11 +63,16 @@
 .item .first-items img {
   width: 110px;
   height: 65px;
+  border: 3px solid var(--color-secondary);
+  border-radius: 5px;
   transition: all 0.7s ease;
 }
 
 .item.expanded {
-  height: 400px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .item.expanded .first-items img {
