--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+.Body-Container img {
+  width: 100%;
+  height: 85%;
+  object-fit: cover;
 }
 
 .Banner-Button {
