--- a/src/components/TagsView.css
+++ b/src/components/TagsView.css
@@ -91,6 +91,14 @@
   align-items: center;
 }
 
+.item {
+  cursor: grab;
+}
+
+.item:active {
+  cursor: grabbing;
+}
+
 .first-items {
   display: flex;
   align-items: center;
@@ -166,6 +174,17 @@
 
 .area-text p {
   margin: 0;
+}
+
+.more-button {
+  display: flex;
+  align-items: center;
+  color: #000000;
+  gap: 5px;
+}
+
+.no-underline {
+  text-decoration: none;
 }
 
 @keyframes moveRight {
