--- a/src/components/itemInfo.css
+++ b/src/components/itemInfo.css
@@ -28,5 +28,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
+}
+
+.item-google-result {
+  display: flex;
 }
