--- a/src/components/itemInfo.css
+++ b/src/components/itemInfo.css
@@ -34,3 +34,10 @@
 .item-google-result {
   display: flex;
 }
+
+.Container-mensaje {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
