--- a/src/components/itemInfo.css
+++ b/src/components/itemInfo.css
@@ -41,3 +41,21 @@
   flex-direction: column;
   align-items: center;
 }
+
+.circle-loader {
+  border: 4px solid var(--color-secondary);
+  border-radius: 50%;
+  border-top: 4px solid var(--color-main);
+  width: 40px;
+  height: 40px;
+  animation: circle-loader 1s linear infinite;
+}
+
+@keyframes circle-loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
