--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,46 +1,74 @@
+:root {
+  --gradient-color: #ace0f9; /* Un color armonioso con --color-main */
+}
+
 .loader {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: var(--color-main); /* Puedes cambiar el fondo si es necesario */
-}
-
-.fade-in-1 {
-  font-size: 2rem;
-  font-weight: bold;
-  opacity: 0;
+  background: linear-gradient(180deg, var(--color-main) 0%, var(--gradient-color) 100%);
+  overflow: hidden;
   position: relative;
-  animation: fadeIn 1s forwards, blink 1s infinite 3s;
-  margin: 10px;
 }
 
-.fade-in-2 {
-  font-size: 2rem;
-  font-weight: bold;
-  opacity: 0;
-  position: relative;
-  animation: fadeIn 2s forwards, blink 1s infinite 3s;
-  margin: 10px;
+.loader::before,
+.loader::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(31, 200, 212, 0.6);
+  z-index: 0;
+  animation: wave 3s infinite ease-in-out;
 }
 
+.loader::after {
+  background: rgba(235, 211, 211, 0.3);
+  animation: wave 8s infinite ease-in-out reverse;
+}
+
+.fade-in-1,
+.fade-in-2,
 .fade-in-3 {
   font-size: 2rem;
   font-weight: bold;
   opacity: 0;
   position: relative;
-  animation: fadeIn 3s forwards, blink 1s infinite 3s;
+  z-index: 1;
   margin: 10px;
+}
+
+.fade-in-1 {
+  animation: fadeIn 1s forwards, blink 1s infinite 3s;
+}
+
+.fade-in-2 {
+  animation: fadeIn 2s forwards, blink 1s infinite 3s;
+}
+
+.fade-in-3 {
+  animation: fadeIn 3s forwards, blink 1s infinite 3s;
+}
+
+@keyframes wave {
+  0%, 100% {
+    clip-path: polygon(0% 47%, 10% 48%, 33% 54%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+  }
+  50% {
+    clip-path: polygon(0% 60%, 15% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+  }
 }
 
 @keyframes fadeIn {
   from {
-    left: -100%; /* Inicia fuera de la pantalla a la izquierda */
+    left: -100%;
     opacity: 0;
   }
   to {
-    left: 0; /* Termina en el centro de la pantalla */
+    left: 0;
     opacity: 1;
   }
 }
