--- a/src/components/TagsView.css
+++ b/src/components/TagsView.css
@@ -133,6 +133,7 @@
 }
 
 .expanded-items h4 {
+  font-size: 20px;
   font-weight: 700;
 }
 
@@ -263,10 +264,11 @@
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
+  background: #fefefeef;
+  margin: auto;
+  margin-top: 60px;
   padding: 20px;
-  border: 1px solid #888;
+  border: 1px solid var(--color-secondary);
   width: 80%;
 }
 
@@ -282,9 +284,12 @@
 .modal-content-1 {
   background-color: var(--color-main);
   margin: 15% auto;
-  padding: 15px;
+  padding: 5px;
   border: 1px solid var(--color-secondary);
   width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .close {
@@ -299,6 +304,32 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.List-item {
+  display: flex;
+  padding: 15px;
+}
+
+.title-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.explain-item {
+  font-family: "Exo", sans-serif;
+  font-size: 19px;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.List-item ul li {
+  margin-bottom: 5px;
+}
+
+.alert {
+  display: flex;
 }
 
 @keyframes moveRight {
